--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 body {
   font-family: "Lato", sans-serif;
-  padding: 1rem 4rem;
+  padding: 10px 20px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
